Changing the images on the homepage & gallery

--- a/gallery.html
+++ b/gallery.html
@@ -189,29 +189,29 @@
 
     <section class="gallery-container-outer">
       <div class="gallery-container-inner">
-        <a href="https://source.unsplash.com/random/?animal" data-lightbox="pictures" data-title="Caption1">
-          <img src="https://source.unsplash.com/random/?animal" alt="" />
+        <a href="https://images.unsplash.com/flagged/photo-1574005280900-3ff489fa1f70?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8Ym94aW5nfGVufDB8fDB8fHww" data-lightbox="pictures" data-title="Professional Boxer, Lewis Sylvester, in the ring.">
+          <img src="https://images.unsplash.com/flagged/photo-1574005280900-3ff489fa1f70?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8Ym94aW5nfGVufDB8fDB8fHww" alt="" />
         </a>
-        <a href="https://source.unsplash.com/random/?fire" data-lightbox="pictures" data-title="Caption2">
-          <img src="https://source.unsplash.com/random/?fire" alt="" />
+        <a href="https://images.unsplash.com/photo-1582234407297-a1b4e08f4e81?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8YmpqfGVufDB8fDB8fHww" data-lightbox="pictures" data-title="Jiu Jitsu Black Belt. Coach. Teacher. Mentor. Friend.">
+          <img src="https://images.unsplash.com/photo-1582234407297-a1b4e08f4e81?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8YmpqfGVufDB8fDB8fHww" alt="" />
         </a>
-        <a href="https://source.unsplash.com/random/?water" data-lightbox="pictures" data-title="Caption3">
-          <img src="https://source.unsplash.com/random/?water" alt="" />
+        <a href="https://images.unsplash.com/photo-1476525223214-c31ff100e1ae?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjd8fGthcmF0ZXxlbnwwfHwwfHx8MA%3D%3D" data-lightbox="pictures" data-title="Karate on the beach - 2020">
+          <img src="https://images.unsplash.com/photo-1476525223214-c31ff100e1ae?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjd8fGthcmF0ZXxlbnwwfHwwfHx8MA%3D%3D" alt="" />
         </a>
-        <a href="https://source.unsplash.com/random/?fight" data-lightbox="pictures" data-title="Caption4">
-          <img src="https://source.unsplash.com/random/?fight" alt="" />
+        <a href="https://images.unsplash.com/photo-1607031767898-5f319512ff1e?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjd8fGtpZHMlMjBtYXJ0aWFsJTIwYXJ0c3xlbnwwfHwwfHx8MA%3D%3D" data-lightbox="pictures" data-title="Karate Kids Kata - 2023">
+          <img src="https://images.unsplash.com/photo-1607031767898-5f319512ff1e?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjd8fGtpZHMlMjBtYXJ0aWFsJTIwYXJ0c3xlbnwwfHwwfHx8MA%3D%3D" alt="" />
         </a>
-        <a href="https://source.unsplash.com/random/?tree" data-lightbox="pictures" data-title="Caption5">
-          <img src="https://source.unsplash.com/random/?tree" alt="" />
+        <a href="https://images.unsplash.com/photo-1677170202297-a9de1d9e72bf?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGJqanxlbnwwfHwwfHx8MA%3D%3D" data-lightbox="pictures" data-title="Pedro Sauer - Gracie Barra">
+          <img src="https://images.unsplash.com/photo-1677170202297-a9de1d9e72bf?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGJqanxlbnwwfHwwfHx8MA%3D%3D" alt="" />
         </a>
-        <a href="https://source.unsplash.com/random/?meat" data-lightbox="pictures" data-title="Caption6">
-          <img src="https://source.unsplash.com/random/?meat" alt="" />
+        <a href="https://plus.unsplash.com/premium_photo-1683120906450-9731d12966e8?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjV8fG1hcnRpYWxzJTIwYXJ0c3xlbnwwfHwwfHx8MA%3D%3D" data-lightbox="pictures" data-title="Taekwondo Masters">
+          <img src="https://plus.unsplash.com/premium_photo-1683120906450-9731d12966e8?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjV8fG1hcnRpYWxzJTIwYXJ0c3xlbnwwfHwwfHx8MA%3D%3D" alt="" />
         </a>
-        <a href="https://source.unsplash.com/random/?drone" data-lightbox="pictures" data-title="Caption7">
-          <img src="https://source.unsplash.com/random/?drone" alt="" />
+        <a href="https://images.unsplash.com/photo-1602827113876-839bcf3ccb3a?q=80&w=3387&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" data-lightbox="pictures" data-title="Judo - NoGi - 2020">
+          <img src="https://images.unsplash.com/photo-1602827113876-839bcf3ccb3a?q=80&w=3387&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
         </a>
-        <a href="https://source.unsplash.com/random/?festival" data-lightbox="pictures" data-title="Caption8">
-          <img src="https://source.unsplash.com/random/?festival" alt="" />
+        <a href="https://images.unsplash.com/photo-1611816153165-fed23698666d?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fG11YXklMjB0aGFpfGVufDB8fDB8fHww" data-lightbox="pictures" data-title="Muay Thai Padwork - 2021">
+          <img src="https://images.unsplash.com/photo-1611816153165-fed23698666d?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fG11YXklMjB0aGFpfGVufDB8fDB8fHww" alt="" />
         </a>
       </div>
     </section>
