--- a/class-bjj.html
+++ b/class-bjj.html
@@ -150,7 +150,7 @@
 
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover the art of Brazilian Jiu-Jitsu at Golden Tiger Academy in Dunboyne. Our expert instructors offer classes for all ages and levels, from beginners to advanced practitioners. Whether you're a kid, fitness enthusiast, or self-defense seeker, join us to unleash your potential in a supportive environment. Elevate your fitness journey at Golden Tiger Academy Dunboyne." />
