--- a/class-kickboxing.html
+++ b/class-kickboxing.html
@@ -150,7 +150,7 @@
 
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Elevate your fitness game with exhilarating kickboxing classes at Golden Tiger Academy in Dunboyne. From beginners to seasoned athletes, our dynamic sessions cater to all skill levels, blending technique, strength, and cardio for a full-body workout. Join our supportive community and unleash your potential with kickboxing." />
