--- a/class-kung-fu.html
+++ b/class-kung-fu.html
@@ -150,7 +150,7 @@
 
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Unveil the ancient art of Kung Fu at Golden Tiger Academy in Dunboyne. Our skilled instructors cater to all skill levels and ages, providing a supportive atmosphere for beginners and advanced practitioners alike. Whether you're a young enthusiast, fitness aficionado, or seeking self-defense mastery, our classes empower you to reach new heights. Elevate your martial arts journey with Golden Tiger Academy Dunboyne." />
