--- a/class-wonhwado.html
+++ b/class-wonhwado.html
@@ -150,7 +150,7 @@
 
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Looking for an exciting martial arts experience for your kid? Look no further than Golden Tiger Academy! Led by Ken Byrne, a 5th-degree black belt in WonHwaDo, our classes offer a unique blend of Korean Kickboxing and WonHwaDo specifically tailored for young warriors. Join us and let your kids kick it with confidence while learning the dynamic techniques of WonHwaDo infused with the energy of Korean Kickboxing!" />
