--- a/gallery.html
+++ b/gallery.html
@@ -150,7 +150,7 @@
 
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="./lightbox.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
