Adding new images to class cards and class pages

--- a/class-karate.html
+++ b/class-karate.html
@@ -201,7 +201,7 @@
     <!-- Section - Our Karate Class Format -->
     <section class="our-class-format-container-outer">
       <div class="our-class-format-container-inner">
-        <img src="https://source.unsplash.com/random/?karate" alt="" />
+        <img src="./images/page-karate-01.png" alt="Karate Sparring class at Golde Tiger Academy" />
 
         <div class="class-text">
           <div class="class-format">
