--- a/class-muay-thai.html
+++ b/class-muay-thai.html
@@ -201,7 +201,7 @@
     <!-- Section - Our Mauy Thai Class Format -->
     <section class="our-class-format-container-outer">
       <div class="our-class-format-container-inner">
-        <img src="https://source.unsplash.com/random/?muaythai" alt="" />
+        <img src="./images/page-muay-thai-01.png" alt="Muay Thai Heavy Bags in Golden Tiger Academy" />
 
         <div class="class-text">
           <div class="class-format">
