--- a/class-wonhwado.html
+++ b/class-wonhwado.html
@@ -201,7 +201,7 @@
     <!-- Section - Our WonHwaDo Class Format -->
     <section class="our-class-format-container-outer">
       <div class="our-class-format-container-inner">
-        <img src="https://source.unsplash.com/random/?korea" alt="" />
+        <img src="./images/page-wonhwado-01.png" alt="Kids WonHwaDo Sparring at Golden Tiger Academy" />
 
         <div class="class-text">
           <div class="class-format">
