--- a/class-bjj.html
+++ b/class-bjj.html
@@ -201,7 +201,7 @@
     <!-- Section - Our BJJ Class Format -->
     <section class="our-class-format-container-outer">
       <div class="our-class-format-container-inner">
-        <img src="./images/ken-byrne.png" alt="Ken Byrne BJJ Black Belt and Michael O'Leary BJJ Purple Belt" />
+        <img src="./images/page-bjj-01.png" alt="Ken Byrne BJJ Black Belt and Michael O'Leary BJJ Purple Belt" />
 
         <div class="class-text">
           <div class="class-format">
