--- a/class-kickboxing.html
+++ b/class-kickboxing.html
@@ -201,7 +201,7 @@
     <!-- Section - Our Kickboxing Class Format -->
     <section class="our-class-format-container-outer">
       <div class="our-class-format-container-inner">
-        <img src="https://source.unsplash.com/random/?kickboxing" alt="" />
+        <img src="./images/page-kickboxing-01.png" alt="Kickboxing class at Golden Tiger Academy" />
 
         <div class="class-text">
           <div class="class-format">
