--- a/class-kung-fu.html
+++ b/class-kung-fu.html
@@ -201,7 +201,7 @@
     <!-- Section - Our Wing Tsun Kung Fu Class Format -->
     <section class="our-class-format-container-outer">
       <div class="our-class-format-container-inner">
-        <img src="https://source.unsplash.com/random/?kungfu" alt="" />
+        <img src="./images/page-wing-tsun-01.png" alt="Michael O'Leary Wing Tsun Kung Fu at Golden Tiger Academy" />
 
         <div class="class-text">
           <div class="class-format">
