Converted Gallery Images to .webp to reduce file size

--- a/gallery.html
+++ b/gallery.html
@@ -189,29 +189,29 @@
 
     <section class="gallery-container-outer">
       <div class="gallery-container-inner">
-        <a href="./images/gallery-1.png" data-lightbox="pictures" data-title="Ken Byrne receiving his black belt from Gary Savage">
-          <img src="./images/gallery-1.png" alt="Ken Byrne receiving his black belt from Gary Savage" />
+        <a href="./images/gallery-1.webp" data-lightbox="pictures" data-title="Ken Byrne receiving his black belt from Gary Savage">
+          <img src="./images/gallery-1.webp" alt="Ken Byrne receiving his black belt from Gary Savage" />
         </a>
-        <a href="./images/gallery-2.png" data-lightbox="pictures" data-title="Michael O'Leary Wing Tsun instructor.">
-          <img src="./images/gallery-2.png" alt="Michael O'Leary Wing Tsun instructor" />
+        <a href="./images/gallery-2.webp" data-lightbox="pictures" data-title="Michael O'Leary Wing Tsun instructor.">
+          <img src="./images/gallery-2.webp" alt="Michael O'Leary Wing Tsun instructor" />
         </a>
-        <a href="./images/gallery-3.png" data-lightbox="pictures" data-title="Kickboxing class warm ups.">
-          <img src="./images/gallery-3.png" alt="Kickboxing class warm ups" />
+        <a href="./images/gallery-3.webp" data-lightbox="pictures" data-title="Kickboxing class warm ups.">
+          <img src="./images/gallery-3.webp" alt="Kickboxing class warm ups" />
         </a>
-        <a href="./images/gallery-4.png" data-lightbox="pictures" data-title="Golden Tiger Academy training area.">
-          <img src="./images/gallery-4.png" alt="Golden Tiger Academy training area" />
+        <a href="./images/gallery-4.webp" data-lightbox="pictures" data-title="Golden Tiger Academy training area.">
+          <img src="./images/gallery-4.webp" alt="Golden Tiger Academy training area" />
         </a>
-        <a href="./images/gallery-5.png" data-lightbox="pictures" data-title="Muay Thai Class Sparring.">
-          <img src="./images/gallery-5.png" alt="Muay Thai Class Sparring" />
+        <a href="./images/gallery-5.webp" data-lightbox="pictures" data-title="Muay Thai Class Sparring.">
+          <img src="./images/gallery-5.webp" alt="Muay Thai Class Sparring" />
         </a>
-        <a href="./images/gallery-6.png" data-lightbox="pictures" data-title="No Gi Brazilian Jiu-Jitsu Class.">
-          <img src="./images/gallery-6.png" alt="No Gi Brazilian Jiu-Jitsu Class" />
+        <a href="./images/gallery-6.webp" data-lightbox="pictures" data-title="No Gi Brazilian Jiu-Jitsu Class.">
+          <img src="./images/gallery-6.webp" alt="No Gi Brazilian Jiu-Jitsu Class" />
         </a>
-        <a href="./images/gallery-7.png" data-lightbox="pictures" data-title="Muay Thai Kickboxing shadow boxing.">
-          <img src="./images/gallery-7.png" alt="Muay Thai Kickboxing shadow boxing." />
+        <a href="./images/gallery-7.webp" data-lightbox="pictures" data-title="Muay Thai Kickboxing shadow boxing.">
+          <img src="./images/gallery-7.webp" alt="Muay Thai Kickboxing shadow boxing." />
         </a>
-        <a href="./images/gallery-8.png" data-lightbox="pictures" data-title="Gary Savage closed  guard seminar">
-          <img src="./images/gallery-8.png" alt="Gary Savage closed  guard seminar" />
+        <a href="./images/gallery-8.webp" data-lightbox="pictures" data-title="Gary Savage closed  guard seminar">
+          <img src="./images/gallery-8.webp" alt="Gary Savage closed  guard seminar" />
         </a>
       </div>
     </section>
