Changed WonHwaDo to Korean Kickboxing page
- Changed WonHwaDo page to Korean kickboxing  page.
- Update meta description to Korean kickboxing.
- Updated  class names to Korean kickboxing.
- Updated the BJJ class card image.
- Update homepage about us section.

--- a/class-korean-kickboxing.html
+++ b/class-korean-kickboxing.html
@@ -153,10 +153,10 @@
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Looking for an exciting martial arts experience for your kid? Look no further than Golden Tiger Academy! Led by Ken Byrne, a 5th-degree black belt in WonHwaDo, our classes offer a unique blend of Korean Kickboxing and WonHwaDo specifically tailored for young warriors. Join us and let your kids kick it with confidence while learning the dynamic techniques of WonHwaDo infused with the energy of Korean Kickboxing!" />
-    <title>WonHwaDo | Golden Tiger Academy</title>
+    <meta name="description" content="Discover the exhilarating world of Korean Kickboxing at Golden Tiger Academy! Led by Ken Byrne, a 5th-degree black belt, our classes offer a unique blend of Korean Kickboxing techniques tailored for young warriors. Join us to empower your kids with confidence, dynamic techniques, and the energy of Korean Kickboxing!" />
+    <title>Korean Kickboxing | Golden Tiger Academy</title>
   </head>
-  <body id="class-wonhwado-body">
+  <body id="class-korean-kickboxing-body">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K6FXLSWW" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
@@ -188,8 +188,8 @@
     <!-- Hero - Intro Section  -->
     <section class="class-intro-container-outer">
       <div class="class-intro-container-inner">
-        <h1 class="class-title">WonHwaDo</h1>
-        <p>WonHwaDo, a dynamic Korean Kickboxing style, emphasizes quick strikes and strategic footwork, fostering effective self-defense skills. Rooted in balance and agility, it empowers individuals of all sizes, offering confidence and formidable techniques for various situations. With its focus on versatility and practicality, WonHwaDo equips practitioners with the tools needed to succeed both in sparring matches and real-world encounters.</p>
+        <h1 class="class-title">Korean Kickboxing</h1>
+        <p>Korean style kickboxing is a dynamic kicking art emphasizees quick strikes and strategic footwork, fostering effective self-defence skills. Korean kickboxing is influenced by various martial arts styles including Won Hwa Do, Taekwondo and kickboxing. With its focus on versatility and practicality, Korean kickboxing equips practitioners with the tools needed to succeed both in sparring matches and real-world encounters.</p>
       </div>
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -198,15 +198,15 @@
       </div>
     </section>
 
-    <!-- Section - Our WonHwaDo Class Format -->
+    <!-- Section - Our Korean  Kickboxing Class Format -->
     <section class="our-class-format-container-outer">
       <div class="our-class-format-container-inner">
-        <img src="./images/page-wonhwado-01.png" alt="Kids WonHwaDo Sparring at Golden Tiger Academy" />
+        <img src="./images/page-korean-kickboxing-01.png" alt="Kids Korean Kickboxing Sparring at Golden Tiger Academy" />
 
         <div class="class-text">
           <div class="class-format">
-            <h2>WonHwado Class</h2>
-            <p>Experience the dynamic fusion of martial arts techniques in our Won Hwa Do classes, influenced by circular philosophy and founded by Great Grand Master Han Bong Ki in 1972. With a focus on circular motions, striking, joint locks, and throws, kids not only learn self-defense skills but also have a blast doing it. Led by Ken Byrne, a 5th Degree Black Belt, our classes offer a supportive atmosphere for kids to enhance their physical fitness and self-confidence through engaging activities like warm-ups, techniques, and sparring.</p>
+            <h2>Korean Kickboxing Class</h2>
+            <p>Korean style kickboxing is a dynamic kicking art and is influenced by various martial arts styles including Won Hwa Do, Taekwondo and kickboxing. Led by Ken Byrne, a 5th WonHwaDo Degree Black Belt and 3rd Degree Kickboxing black belt, our classes offer a supportive atmosphere for kids to enhance their physical fitness and self-confidence through engaging activities like warm-ups, techniques, and sparring.</p>
           </div>
         </div>
       </div>
@@ -220,7 +220,7 @@
     <!-- Section - The Benefits -->
     <section class="class-section-container-outer">
       <div class="class-section-container-inner">
-        <div class="benefits-image wonhwado"></div>
+        <div class="benefits-image korean-kickboxing"></div>
 
         <div class="benefits-text-container">
           <h2>The Benefits</h2>
@@ -232,17 +232,17 @@
           <div class="benefits">
             <img src="./images/icon-fitness.png" class="class-icon" alt="" />
             <h3>Improved Fitness</h3>
-            <p>Elevate your cardiovascular health, strength, and overall fitness levels through dynamic WonHwaDo workouts and techniques.</p>
+            <p>Elevate your cardiovascular health, strength, and overall fitness levels through dynamic Korean Kickboxing workouts and techniques.</p>
           </div>
           <div class="benefits">
             <img src="./images/icon-mental-health.png" class="class-icon" alt="" />
             <h3>Mental Wellness</h3>
-            <p>Experience improved focus, discipline, and stress management as you navigate the mental challenges and rewards of WonHwaDo training.</p>
+            <p>Experience improved focus, discipline, and stress management as you navigate the mental challenges and rewards of Korean Kickboxing training.</p>
           </div>
           <div class="benefits">
             <img src="./images/icon-community.png" class="class-icon" alt="" />
             <h3>Supportive Community</h3>
-            <p>Join a fun and welcoming community where you'll make friends, share laughs, and support each other on your WonHwaDo journey.</p>
+            <p>Join a fun and welcoming community where you'll make friends, share laughs, and support each other on your Korean Kickboxing journey.</p>
           </div>
         </div>
       </div>
