--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <section class="hero-section-inner">
         <div class="hero-text-container">
           <h1 id="hero-header">Begin Your Martial Arts Journey at Golden Tiger Academy.</h1>
-          <p id="hero-subheader">Martial arts classes for all ages and levels, no experience required. Start your martial arts journey today with Brazilian Jiu-Jitsu, Karate, Muay Thai, Kung Fu, and more in Dunboyne, County Meath. Boost your fitness, learn self-defense, and unleash your potential. Get in touch to arrange a free trial class.</p>
+          <p id="hero-subheader">Martial arts classes for all ages and levels, no experience required. Start your martial arts journey today with Brazilian Jiu-Jitsu, Kenpo Karate, Muay Thai, Kung Fu, and more in Dunboyne, County Meath. Boost your fitness, learn self-defense, and unleash your potential. Get in touch to arrange a free trial class.</p>
           <div class="cta-container">
             <div class="cta-wrap">
               <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
@@ -233,9 +233,9 @@
             Head Instructor
           </h3>
 
-          <p>Golden Tiger Academy, founded in 2008 by Ken Byrne, our Head Instructor who has over 35 years of martial arts experience and has been awarded a black belt in Brazilian Jiu-Jitsu, Kickboxing, Kenpo Karate, Kantanni Karate, WonHwaDo and Haidong Gumdo.</p>
+          <p>Golden Tiger Academy, founded in 2008 by Ken Byrne, our Head Instructor who has over 38 years of martial arts experience and has been awarded a black belt in Brazilian Jiu-Jitsu, Kickboxing, Kenpo Karate, Kantanni Karate, WonHwaDo and Haidong Gumdo.</p>
 
-          <p>At Golden Tiger Academy We have classes that are designed to improve your self-defense and fitness levels. We have classes for all ages kids, teens and adults. Golden Tiger Academy provides a welcoming and supportive enviroment to train in to help you progress in your martial arts journey.</p>
+          <p>At Golden Tiger Academy we have classes that are designed to improve your self-defense and fitness levels. We have classes for all ages kids, teens and adults. Golden Tiger Academy provides a welcoming and supportive enviroment to train in to help you progress in your martial arts journey.</p>
         </div>
       </div>
       <div class="shape-divider-bottom">
@@ -258,9 +258,9 @@
         </div>
         <div class="card card2">
           <div class="card-content">
-            <h3 class="card-header">Karate</h3>
-            <p class="card-subheader">Karate blends punches, kicks, and blocks for self-defense. Discipline, respect, and physical conditioning are core aspects, fostering personal development and martial skill.</p>
-            <a href="./class-karate" class="card-btn class-karate">Learn More <span class="sr-only">about Karate</span></a>
+            <h3 class="card-header">Kenpo Karate</h3>
+            <p class="card-subheader">Kenpo Karate blends punches, kicks, and blocks for self-defense. Discipline, respect, and physical conditioning are core aspects, fostering personal development and martial skill.</p>
+            <a href="./class-karate" class="card-btn class-karate">Learn More <span class="sr-only">about Kenpo Karate</span></a>
           </div>
         </div>
         <div class="card card3">
@@ -287,9 +287,9 @@
         </div>
         <div class="card card6">
           <div class="card-content">
-            <h3 class="card-header">Wonhwado</h3>
-            <p class="card-subheader">Wonhwado, a Korean martial art, integrates traditional techniques with modern self-defense. Emphasizes dynamic strikes, joint locks, and circular movements for a balanced martial practice.</p>
-            <a href="./class-wonhwado" class="card-btn class-wonhwado">Learn More <span class="sr-only">about Wonhwado</span></a>
+            <h3 class="card-header">Korean Kickboxing</h3>
+            <p class="card-subheader">Korean style kickboxing is a dynamic kicking art and is influenced by various martial arts styles including Won Hwa Do, Taekwondo and kickboxing.</p>
+            <a href="./class-korean-kickboxing.html" class="card-btn class-korean-kickboxing">Learn More <span class="sr-only">about Korean Kickboxing</span></a>
           </div>
         </div>
       </div>
@@ -304,7 +304,7 @@
         <button class="time-table-button" id="muay-thai">Muay Thai</button>
         <button class="time-table-button" id="kickboxing">Kickboxing</button>
 
-        <button class="time-table-button" id="karate">Karate</button>
+        <button class="time-table-button" id="karate">Kenpo Karate</button>
         <button class="time-table-button" id="wing-tsun">Wing Tsun</button>
         <button class="time-table-button" id="blood-and-bones">Blood & Bones</button>
         <button class="time-table-button" id="open-mat">Open Mat</button>
@@ -337,15 +337,15 @@
             <div class="time" data-cell="time">5pm - 5:45pm</div>
           </td>
           <!-- Thursday Row 1 -->
-          <td class="class wonhwado" data-cell="class">
-            WonHwaDo (age 5-12)
+          <td class="class korean-kickboxing" data-cell="class">
+            Korean Kickboxing (age 5-12)
             <div class="time" data-cell="time">6pm - 6:45pm</div>
           </td>
           <!-- Friday Row 1 -->
           <td class="class closed" data-cell="class">Closed</td>
           <!-- Saturday Row 1 -->
           <td class="class karate" data-cell="class">
-            Karate (age 5-12)
+            Kenpo Karate (age 5-12)
             <div class="time" data-cell="time">9:30am - 10:15am</div>
           </td>
           <!-- Sunday Row 1 -->
@@ -376,7 +376,7 @@
           <td class="class closed" data-cell="class">Closed</td>
           <!-- Saturday Row 2 -->
           <td class="class karate" data-cell="class">
-            Karate (age 13-17)
+            Kenpo Karate (age 13-17)
             <div class="time" data-cell="time">10:30am - 11:30am</div>
           </td>
           <td class="class closed" data-cell="class">Closed</td>
@@ -395,7 +395,7 @@
           </td>
           <!-- Wednesday Row 3 -->
           <td class="class karate" data-cell="class">
-            Karate (age 13-17)
+            Kenpo Karate (age 13-17)
             <div class="time" data-cell="time">7pm - 8pm</div>
           </td>
           <!-- Thursday Row 3 -->
@@ -423,7 +423,7 @@
           <td></td>
           <!-- Wednesday Row 4 -->
           <td class="class karate" data-cell="class">
-            Karate
+            Kenpo Karate
             <div class="time" data-cell="time">8pm - 9pm</div>
           </td>
           <!--Thursday Row 4 -->
@@ -508,13 +508,13 @@
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            Karate (age 13-17)
+            Kenpo Karate (age 13-17)
             <div class="time" data-cell="time">7pm - 8pm</div>
           </td>
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            Karate
+            Kenpo Karate
             <div class="time" data-cell="time">8pm - 9:00pm</div>
           </td>
         </tr>
@@ -524,7 +524,7 @@
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            WonHwaDo (age 5 -12)
+            Korean Kickboxing (age 5 -12)
             <div class="time" data-cell="time">6pm - 6:45pm</div>
           </td>
         </tr>
@@ -553,20 +553,20 @@
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            Karate (age 5 -12)
+            Kenpo Karate (age 5 -12)
             <div class="time" data-cell="time">9:30am - 10:15am</div>
           </td>
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            Karate
-            <div class="time" data-cell="time">11:30am - 12:30pm</div>
+            Kenpo Karate (age 13-17)
+            <div class="time" data-cell="time">10:30am - 11:30am</div>
           </td>
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            Karate (age 13-17)
-            <div class="time" data-cell="time">10:30am - 11:30am</div>
+            Kenpo Karate
+            <div class="time" data-cell="time">11:30am - 12:30pm</div>
           </td>
         </tr>
         <tr>
@@ -613,7 +613,7 @@
               <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
-            <p class="faq-answer" id="answer3" aria-hidden="true"><span>Kids can start martial arts at Golden Tiger Academy from the age of 5. We offer kids classes in Brazilian Jiu-jitsu, Kickboxing, WonHwaDo, and Karate tailored to younger students, providing a fun, safe and supportive environment for learning essential skills like discipline, respect, and self-confidence. We also offer classes for teens ages 13 - 17. </span></p>
+            <p class="faq-answer" id="answer3" aria-hidden="true"><span>Kids can start martial arts at Golden Tiger Academy from the age of 5. We offer kids classes in Brazilian Jiu-jitsu, Kickboxing, Korean Kickboxing, and Kenpo Karate tailored to younger students, providing a fun, safe and supportive environment for learning essential skills like discipline, respect, and self-confidence. We also offer classes for teens ages 13 - 17. </span></p>
           </li>
 
           <li class="faq">
