--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
               <li><a href="./#about-us" class="nav-link">About us</a></li>
               <li><a href="./#our-classes" class="nav-link">Our Classes</a></li>
               <li><a href="./#timetable" class="nav-link">Timetable</a></li>
+              <li><a href="./#faqs" class="nav-link">FAQs</a></li>
               <li><a href="./gallery" class="nav-link">Gallery</a></li>
               <li><a href="./contact-us" class="nav-link">Contact Us</a></li>
             </ul>
@@ -586,7 +587,7 @@
     </section>
 
     <!-- FAQ Section -->
-    <section class="faq-section-container-outer">
+    <section class="faq-section-container-outer" id="faqs">
       <h2>FAQ's</h2>
       <div class="faq-section-container-inner">
         <ul class="accordion">
