removing .html  from Korean Kickboxing card CTA

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           <div class="card-content">
             <h3 class="card-header">Korean Kickboxing</h3>
             <p class="card-subheader">Korean style kickboxing is a dynamic kicking art and is influenced by various martial arts styles including Won Hwa Do, Taekwondo and kickboxing.</p>
-            <a href="./class-korean-kickboxing.html" class="card-btn class-korean-kickboxing">Learn More <span class="sr-only">about Korean Kickboxing</span></a>
+            <a href="./class-korean-kickboxing" class="card-btn class-korean-kickboxing">Learn More <span class="sr-only">about Korean Kickboxing</span></a>
           </div>
         </div>
       </div>
