--- a/class-bjj.html
+++ b/class-bjj.html
@@ -150,7 +150,13 @@
 
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
+    <meta name="msapplication-TileColor" content="#ffc40d" />
+    <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover the art of Brazilian Jiu-Jitsu at Golden Tiger Academy in Dunboyne. Our expert instructors offer classes for all ages and levels, from beginners to advanced practitioners. Whether you're a kid, fitness enthusiast, or self-defense seeker, join us to unleash your potential in a supportive environment. Elevate your fitness journey at Golden Tiger Academy Dunboyne." />
