--- a/class-kung-fu.html
+++ b/class-kung-fu.html
@@ -150,7 +150,13 @@
 
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
+    <meta name="msapplication-TileColor" content="#ffc40d" />
+    <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Unveil the ancient art of Kung Fu at Golden Tiger Academy in Dunboyne. Our skilled instructors cater to all skill levels and ages, providing a supportive atmosphere for beginners and advanced practitioners alike. Whether you're a young enthusiast, fitness aficionado, or seeking self-defense mastery, our classes empower you to reach new heights. Elevate your martial arts journey with Golden Tiger Academy Dunboyne." />
