Added light bulb animation to 404 error page

--- a/404.html
+++ b/404.html
@@ -166,6 +166,19 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K6FXLSWW" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <div class="bulb-container">
+      <div class="wire"></div>
+      <div class="connector">
+        <div class="groove"></div>
+        <div class="groove"></div>
+        <div class="groove"></div>
+      </div>
+      <div class="bulb">
+        <div class="metal-wire"></div>
+        <div class="metal-wire"></div>
+        <div class="metal-wire"></div>
+      </div>
+    </div>
 
     <div class="error-404-outer-container">
       <div class="error-404-inner-container">
