--- a/404.html
+++ b/404.html
@@ -160,7 +160,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore martial arts excellence at Golden Tiger Academy in Dunboyne. Classes for all ages and levels, from beginners to advanced. Expert instructors guide kids, fitness enthusiasts, and self-defense seekers. Unleash your potential in a supportive environment. Elevate your fitness journey at Golden Tiger Academy Dunboyne." />
-    <title>Page Not Found</title>
+    <title>Page Not Found | Golden Tiger Academy</title>
   </head>
   <body id="error-404-body">
     <!-- Google Tag Manager (noscript) -->
