--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore martial arts excellence at Golden Tiger Academy in Dunboyne. Classes for all ages and levels, from beginners to advanced. Expert instructors guide kids, fitness enthusiasts, and self-defense seekers. Unleash your potential in a supportive environment. Elevate your fitness journey at Golden Tiger Academy Dunboyne." />
-    <title>Golden Tiger Academy Dunboyne: Martial Arts Classes for All Ages and Levels</title>
+    <title>Martial arts classes | Brazilian Jiu-Jitsu | Karate | Muay-Thai | Kickboxing</title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
