Adding testimonials section
- added testimonials section.
- Updated shape-divider-bottom filler color naming convention to use "theme" colours.

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       </section>
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill-light"></path>
+          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-3"></path>
         </svg>
       </div>
     </div>
@@ -247,7 +247,7 @@
       </div>
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill-dark"></path>
+          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-2"></path>
         </svg>
       </div>
     </section>
@@ -299,6 +299,41 @@
             <a href="./class-korean-kickboxing" class="card-btn class-korean-kickboxing">Learn More <span class="sr-only">about Korean Kickboxing</span></a>
           </div>
         </div>
+      </div>
+      <div class="shape-divider-bottom classes">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-3"></path>
+        </svg>
+      </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section class="testimonials-section-container-outer">
+      <h2>Testimonials</h2>
+      <div class="testimonials-section-container-inner">
+        <div class="testimonial-card hidden">
+          <h3>Liam McBride</h3>
+          <img src="./images/icon-5-stars.png" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">Great club with a great coach. A very friendly and encouraging environment to learn and grow, with a good selection of various martial arts on offer.</p>
+          <img src="./images/icon-google-reviews.png" alt="" class="icon-google" />
+        </div>
+        <div class="testimonial-card hidden">
+          <h3>Daniel McTigue</h3>
+          <img src="./images/icon-5-stars.png" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">I've been training here and love it! I was quite nervous starting but Ken is such a nice guy and everyone makes you feel so welcome! Would highly recommend!</p>
+          <img src="./images/icon-google-reviews.png" alt="" class="icon-google" />
+        </div>
+        <div class="testimonial-card hidden">
+          <h3>Laurence Coleman</h3>
+          <img src="./images/icon-5-stars.png" class="icon-stars" alt="5 stars" />
+          <p class="testimonial-review">Great place to start a martial art. Doesn’t matter what age you’ll find it fits perfectly in your life. It gives you a solid workout also a new and exciting discipline.</p>
+          <img src="./images/icon-google-reviews.png" alt="" class="icon-google" />
+        </div>
+      </div>
+      <div class="shape-divider-bottom">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-1"></path>
+        </svg>
       </div>
     </section>
 
@@ -705,5 +740,6 @@
     </footer>
 
     <script src="./app.js"></script>
+    <script src="./animate.js"></script>
   </body>
 </html>
