--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
           <h1 id="hero-header">Begin Your Martial Arts Journey at Golden Tiger Academy.</h1>
           <p id="hero-subheader">Martial arts classes for all ages and levels, no experience required. Start your martial arts journey today with Brazilian Jiu-Jitsu, Kenpo Karate, Muay Thai, Kung Fu, and more in Dunboyne, County Meath. Boost your fitness, learn self-defense, and unleash your potential. Get in touch to arrange a free trial class.</p>
           <div class="cta-container">
-            <div class="cta-wrap">
+            <div class="cta-wrap draw-border">
               <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
             </div>
-            <div class="cta-wrap">
+            <div class="cta-wrap draw-border draw-border-black">
               <a href="tel:0872333481" class="cta cta-2-call-us"> <i class="fa fa-solid fa-phone fa-flip-horizontal"></i> Call Us Now</a>
             </div>
           </div>
@@ -693,10 +693,10 @@
         <h3>Ready to Begin?</h3>
         <p>Ready to jump in and join us? Get started by contacting us to set up your free trial class</p>
         <div class="cta-container">
-          <div class="cta-wrap">
+          <div class="cta-wrap draw-border">
             <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
           </div>
-          <div class="cta-wrap">
+          <div class="cta-wrap draw-border draw-border-black">
             <a href="tel:0872333481" class="cta cta-2-call-us"> <i class="fa fa-solid fa-phone fa-flip-horizontal"></i> Call Us Now</a>
           </div>
         </div>
