Adding canonical URLs on each page.

--- a/class-kickboxing.html
+++ b/class-kickboxing.html
@@ -16,7 +16,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <!-- Hotjar Tracking Code for https://user9511.github.io/golden-tiger-academy-main/index.html -->
+    <!-- Hotjar Tracking Code for https://goldentigeracademy.com/ -->
     <script>
       (function (h, o, t, j, a, r) {
         h.hj =
@@ -150,6 +150,7 @@
 
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
+    <link rel="canonical" href="https://goldentigeracademy.com/class-kickboxing" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
